[package]
name = "czech-addresses"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
zip = "2.1.3"
